src/test/ui/privacy/access_levels.stderr
error: Public: None, Exported: None, Reachable: None, ReachableFromImplTrait: None
  --> $DIR/access_levels.rs:4:1
   |
LL | mod outer {
   | ^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:6:5
   |
LL |     pub mod inner1 {
   |     ^^^^^^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:9:9
   |
LL |         extern "C" {}
   |         ^^^^^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:12:9
   |
LL |         pub trait PubTrait {
   |         ^^^^^^^^^^^^^^^^^^

error: Public: None, Exported: None, Reachable: None, ReachableFromImplTrait: None
  --> $DIR/access_levels.rs:20:9
   |
LL |         struct PrivStruct;
   |         ^^^^^^^^^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:23:9
   |
LL |         pub union PubUnion {
   |         ^^^^^^^^^^^^^^^^^^

error: Public: None, Exported: None, Reachable: None, ReachableFromImplTrait: None
  --> $DIR/access_levels.rs:25:13
   |
LL |             a: u8,
   |             ^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:27:13
   |
LL |             pub b: u8,
   |             ^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:31:9
   |
LL |         pub enum Enum {
   |         ^^^^^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:33:13
   |
LL |             A(
   |             ^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:35:17
   |
LL |                 PubUnion,
   |                 ^^^^^^^^

error: Public: None, Exported: None, Reachable: None, ReachableFromImplTrait: None
  --> $DIR/access_levels.rs:41:5
   |
LL |     macro_rules! none_macro {
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: Public: pub, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:47:5
   |
LL |     macro_rules! public_macro {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: Public: None, Exported: None, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:52:5
   |
LL |     pub struct ReachableStruct {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Public: None, Exported: None, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:54:9
   |
LL |         pub a: u8,
   |         ^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:14:13
   |
LL |             const A: i32;
   |             ^^^^^^^^^^^^

error: Public: None, Exported: pub, Reachable: pub, ReachableFromImplTrait: pub
  --> $DIR/access_levels.rs:16:13
   |
LL |             type B;
   |             ^^^^^^

error: aborting due to 17 previous errors

